--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/git,jupyternotebooks,dotenv,python,visualstudiocode,macos,windows,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,jupyternotebooks,dotenv,python,visualstudiocode,macos,windows,venv
 
+intro-to-ls/
+
 ### dotenv ###
 .env
 
