기초 그래프 개념 학습(노드,엣지,상태)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/git,jupyternotebooks,dotenv,python,visualstudiocode,macos,windows,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,jupyternotebooks,dotenv,python,visualstudiocode,macos,windows,venv
 
-intro-to-ls/
+lc-academy-env/
 
 ### dotenv ###
 .env
